@@ -1,1 +1,2 @@
+* Require shopify_api gem
 * Don't require shopify.yml when using environment variables [cody]
